# airline-sked

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  refresh-dashboard.yml
data/: airlines.json  airports.json  dashboard_seed.json
docker/: Dockerfile  docker-compose.yml
docs/: dashboard.html  index.html
docs/assets/: dashboard.js  theme.js
docs/data/: dashboard.json
scripts/: build_pages_data.py
src/airline_sked/: __init__.py  cli.py  config.py  database.py  docs_dashboard.py
src/airline_sked/api/: main.py
src/airline_sked/api/routes/: airlines.py  changes.py  schedules.py  subscriptions.py
src/airline_sked/differ/: __init__.py  comparator.py  engine.py  events.py
src/airline_sked/models/: __init__.py  airline.py  change.py  route.py
src/airline_sked/notifiers/: __init__.py  base.py  formatter.py
src/airline_sked/scheduler/: jobs.py
src/airline_sked/scrapers/: __init__.py  airlines.py  airport_kr.py  base.py  news.py  runner.py
tests/: test_docs_dashboard.py
tests/test_differ/: test_engine.py
tests/test_notifiers/: test_formatter.py
tests/test_scrapers/: test_airlines.py  test_base.py  test_runner.py
